# LoRe-BasisInterp

./: .gitignore  CONCEPT_VECTOR_README.md  checkpoint.md  modal_compute_vectors.py  utils.py
PRISM/: basis_reproducibility_check.py  build_embedding_map.py  causal_intervention.py  compare_ranks.py  compute_concept_vectors.py  concept_basis_alignment.py  concept_library.py  generate-prism-embeddings.py  generate_contrastive_pairs.py  (+5 more)
PRISM/interp/llm-judge/: .env.example  .gitignore  README.md  contrastive_pairs.json  pyproject.toml
PRISM/interp/llm-judge/config/: concepts.py  models.py
PRISM/interp/llm-judge/data/: contrastive_pairs_sample.json  example_input.json
PRISM/interp/llm-judge/example_run_output/: contrastive_pairs_sample__chatgpt__disagreement.csv  contrastive_pairs_sample__chatgpt__judgments.csv  contrastive_pairs_sample__chatgpt__raw.jsonl  contrastive_pairs_sample__claude__disagreement.csv  contrastive_pairs_sample__claude__judgments.csv  contrastive_pairs_sample__claude__raw.jsonl  contrastive_pairs_sample__gemini__disagreement.csv  contrastive_pairs_sample__gemini__judgments.csv  contrastive_pairs_sample__gemini__raw.jsonl
PRISM/interp/llm-judge/src/judge/: cache.py  cli.py  concepts.py  parsing.py  prompt.py  runner.py  schema.py  writer.py
PRISM/interp/llm-judge/src/judge/providers/: __init__.py  _retry.py  anthropic.py  fake.py  google.py  openai.py
PRISM/interp/llm-judge/tests/: test_cache.py  test_cli.py  test_concepts.py  test_fake_provider.py  test_parsing.py  test_prompt.py  test_retry.py  test_runner.py  test_schema.py  test_writer.py
(+31 files in other folders)
