[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-judge"
version = "0.1.0"
description = "Pairwise LLM-judge harness for reward-model interpretability."
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "google-genai",
    "openai",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
